Next
    New Features
    * Now checking if there are too many arguments. [github #23]
    * No signature now implies the empty signature.
    * The empty signature is now clearly defined.

    Bug Fixes
    * Now depending on a version of Devel::Declare that works with
      5.13 and up. [github #10]


20110324.1600_001  Thu, 24 Mar 2011 16:00:38 +1100
    Bug Fix
    * Declare dependency on Any::Moose [github #9]


20110322.0027_001  Tue, 22 Mar 2011 00:27:00 +1100
    New Features
    * Added support for Perl 6 style type syntax backed by Any::Moose
      (barefootcoder) [github #3]

    Test Fixes
    * t/syntax_errors.t would fail on some versions of Perl because
      we wouldn't get the expected error message out of eval.
      [github #4]


20110216.1153_001  Wed, 16 Feb 2011 11:35:05 +1100
    New Features
    * Data::Alias is no longer optional.  It's been fixed and is now
      maintained.  Aliasing will now always work.

    Misc
    * Use Const::Fast to implement read only arguments.  This avoids the
      optional Readonly::XS to make it fast.


20100730  Fri Jul 30 12:54:20 PDT 2010
    New Features
    * Added func() to handle functions.

    Incompatible Changes
    * Data::Alias is now optional.  This is because it does not work in 5.12
      and there's no fix in sight.  If you want to use aliasing in your
      distribution it will have to depend on Data::Alias itself.

    Docs
    * Updated the SEE ALSO
    * Removed the assertion that no checks are done on the signature    


20090620  Sat Jun 20 01:26:59 PDT 2009
    Performance
    * Load PPI on demand to reduce load time (needed by perl5i)

    Other
    * Separated signature translation between methods and subroutines
      (needed by perl5i)


20081028  Tue Oct 28 00:45:48 PDT 2008
    New Features
    * Two or more slurpy parameters (ie. @foo or %bar) in a signature is
      an error.

    Bug Fixes
    * The debugger now works, thanks to an upgrade in Devel::Declare.