@@ -17,14 +17,32 @@ use Test::Exception;
     method slurpy_required(@that!) { return \@that }
     method slurpy_last($this, @that) { return $this, \@that; }
 
+    ok !eval q[func slurpy_first(@that, $this) { return $this, \@that; }];
+    like $@, qr{slurpy parameter \@that must come at the end};
     TODO: {
-        local $TODO = "Finish slurpy tests";
+        local $TODO = "error message incorrect inside an eval";
 
-        ok !eval q[func slurpy_first(@that, $this) { return $this, \@that; }];
-        like $@, qr{slurpy parameter must come at end};
+        like $@, qr{Stuff::};
+        like $@, qr{slurpy_first\(\)};
+    }
 
-        ok !eval q[func slurpy_middle($this, @that, $other) { return $this, \@that, $other }];
-        like $@, qr{slurpy parameter must come at end};
+    ok !eval q[func slurpy_middle($this, @that, $other) { return $this, \@that, $other }];
+    like $@, qr{slurpy parameter \@that must come at the end};
+    TODO: {
+        local $TODO = "error message incorrect inside an eval";
+
+        like $@, qr{Stuff::};
+        like $@, qr{slurpy_middle\(\)};
+    }
+
+    ok !eval q[func slurpy_positional(:@that) { return \@that; }];
+    like $@, qr{slurpy parameter \@that cannot be named, use a reference instead};
+
+    TODO: {
+        local $TODO = "error message incorrect inside an eval";
+
+        like $@, qr{Stuff::};
+        like $@, qr{slurpy_positional\(\)};
     }
 
     ok !eval q[func slurpy_two($this, @that, @other) { return $this, \@that, \@other }];
